cabal-version: 2.4
name: iptables-log-parser
version: 0.1.0.0
synopsis: Decode iptables logs
bug-reports: https://github.com/layer-3-communications/iptables-log-parser/issues
license: BSD-3-Clause
license-file: LICENSE
author: Andrew Martin
maintainer: amartin@layer3com.com
copyright: 2020 Layer 3 Communications
category: Data
build-type: Simple
extra-source-files: CHANGELOG.md

library
  exposed-modules:
    Linux.Iptables
    Net.Protocol
  build-depends:
    , base >=4.12 && <5
    , bytesmith >= 0.3.1 && <0.4
    , byteslice >= 0.2.3 && <0.3
    , bytehash >= 0.1 && <0.2
    , ip >=1.7 && <1.8
    , primitive >=0.7 && <0.8
    , vector >=0.12 && <0.14
  hs-source-dirs: src
  ghc-options: -Wall -O2
  default-language: Haskell2010

test-suite test
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  main-is: Main.hs
  build-depends:
    , base
    , iptables-log-parser
    , primitive
    , byteslice
    , ip
  ghc-options: -Wall -O2
  default-language: Haskell2010

benchmark bench
  type: exitcode-stdio-1.0
  hs-source-dirs: bench
  main-is: Main.hs
  build-depends:
    , base
    , iptables-log-parser
    , gauge
    , primitive
    , byteslice
    , ip
  ghc-options: -Wall -O2
  default-language: Haskell2010
